--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -14,7 +14,7 @@
     <title>TravelME</title>
   </head>
 
-  <body>
+  <body class="h-full overflow-x-hidden">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
