design changed part 2

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="./src/assets/images/pngwing.com.png" />
+    <link
+      rel="icon"
+      href="./src/assets/images/Immagine_2025-11-03_154252-removebg-preview.png"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
